# context_variants

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  test_optional_base_attrs.rs
src/: lib.rs
tests/: migration_test.rs  test_serde_with_display_from_str.rs  trybuild.rs
tests/tb/: fail_complex_conflict.rs  fail_field_conflict.rs  fail_incomplete_coverage.rs  fail_incomplete_coverage.stderr  pass_all_fields.rs  pass_attribute_combination.rs  pass_conditional_attributes.rs  pass_field_groups.rs  pass_groups_with_all_fields.rs  pass_naming.rs  pass_optional_base.rs  pass_validation_basic.rs  pass_variant_types.rs  pass_when_base.rs
tests/ui/: fail_complex_conflict.stderr  fail_field_conflict.stderr  pass_all_fields.rs  pass_attribute_combination.rs  pass_basic_fluent_api.rs  pass_build_base_false.rs  pass_build_base_true.rs  pass_conditional_attributes.rs  pass_context_level_config.rs  pass_field_groups.rs  pass_groups_with_all_fields.rs  pass_naming.rs  pass_when_base.rs
