[package]
name = "context_variants"
version = "0.1.0"
edition = "2021"
description = "A procedural macro to generate context‐specific struct variants with required/optional field handling."
license = "MIT OR Apache-2.0"
repository = "https://github.com/BrokenStandards/context_variants"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"

[dev-dependencies]
trybuild = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
